--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,21 @@
     line-height: 1.4;
   }
   
+  button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  p {
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 350;
+  }
